# postman

./: .gitignore  Cargo.toml  Makefile  config.example.yaml
scripts/: run_job.sh  rust_code_base.txt  update_code.sh
src/: config.rs  db.rs  main.rs
src/commands/: fetch.rs  install.rs  mod.rs  process.rs  publish.rs  stats.rs
